--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "apexcharts": "^3.36.3",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "primereact": "^8.7.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
