--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.14",
+    "@mui/x-data-grid": "^5.17.12",
     "apexcharts": "^3.36.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
