--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.12",
+    "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
@@ -21,7 +22,9 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
