--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "redux-logger": "^3.0.6",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
