--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux-logger": "^3.0.6",
+    "sweetalert2": "^11.6.15",
+    "sweetalert2-react-content": "^5.0.7",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
