--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.16",
     "@mui/x-data-grid": "^5.17.12",
+    "@mui/x-date-pickers": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "primereact": "^8.7.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
