--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^5.0.9",
     "@reduxjs/toolkit": "^1.9.0",
     "apexcharts": "^3.36.3",
+    "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.6",
     "formik": "^2.2.9",
